--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,21 @@
 {
     "manifest_version": 4,
     "type": "extension",
-    "name": "窗口置顶",
-    "slug": "window_on_top",
-    "description": "添加窗口置顶按钮",
-    "version": "0.1.6",
+    "name": "窗口关闭",
+    "slug": "window_quit",
+    "description": "改关闭按钮为退出",
+    "version": "0.0.1",
     "authors": [
         {
-            "name": "沫烬染",
-            "link": "https://github.com/mo-jinran"
+            "name": "Mzdyl",
+            "link": "https://github.com/mzdyl"
         }
     ],
     "repository": {
-        "repo": "mo-jinran/window-on-top",
+        "repo": "mzdyl/window-quit",
         "branch": "v4",
         "release": {
-            "tag": "0.1.6"
+            "tag": "0.0.1"
         }
     },
     "platform": [
